--- a/findemployer.html
+++ b/findemployer.html
@@ -13,12 +13,13 @@
 
         .header {
             text-align: center;
-            background: Teal;
+            background: orange;
         }
 
         body {
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
+            background-color: linen
         }
 
         .topnav {
@@ -52,7 +53,7 @@
         <a href="postyourcompany.html">Post Your Company</a>
         <a class="active" href="findemployer.html">Find Employer</a>
         <a href="#faq">FAQ's</a>
-        <a href="#signup.html">Sign Up</a>
+        <a href="signup.html">Sign Up</a>
     </div>
 
 </body>
