--- a/static/FindEmployer.html
+++ b/static/FindEmployer.html
@@ -8,10 +8,9 @@
 </head>
 <body>
   <div class="topnav">
-        <a href="index.html">Find Remodeling Company</a>
+        <a href="/">Find Remodeling Company</a>
         <a href="Postyourcompany.html">Post Your Company</a>
         <a class="active" href="FindEmployer.html">Post Your Skills</a>
-        <a href="jobs.html">Find Employers</a>
   </div>
   <form id="regForm" action="process.php" method="POST">
     <h1>Register:</h1>
