--- a/static/Postyourcompany.html
+++ b/static/Postyourcompany.html
@@ -40,10 +40,9 @@ div {
 </head>
 <body>
   <div class='topnav'>
-      <a href='index.html'>Find Remodeling Company</a>
+      <a href='/'>Find Remodeling Company</a>
       <a class='active' href='Postyourcompany.html'>Post Your Company</a>
       <a href='FindEmployer.html'>Post Your Skills</a>
-      <a href='jobs.html'>Find Jobs</a>
   </div>
    <h1>Register:</h1>
   <div>
